@@ -1,6 +1,7 @@
 package com.fptu.sep490.readingservice.service.impl;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fptu.sep490.commonlibrary.exceptions.AppException;
 import com.fptu.sep490.commonlibrary.redis.RedisService;
 import com.fptu.sep490.commonlibrary.utils.CookieUtils;
@@ -10,6 +11,8 @@ import com.fptu.sep490.readingservice.model.*;
 import com.fptu.sep490.readingservice.model.embedded.AnswerAttemptId;
 import com.fptu.sep490.readingservice.model.enumeration.QuestionType;
 import com.fptu.sep490.readingservice.model.enumeration.Status;
+import com.fptu.sep490.readingservice.model.json.AttemptVersion;
+import com.fptu.sep490.readingservice.model.json.QuestionVersion;
 import com.fptu.sep490.readingservice.repository.*;
 import com.fptu.sep490.readingservice.repository.client.KeyCloakTokenClient;
 import com.fptu.sep490.readingservice.repository.client.KeyCloakUserClient;
@@ -49,7 +52,7 @@ public class AttemptServiceImpl implements AttemptService {
     DragItemRepository dragItemRepository;
     ChoiceRepository choiceRepository;
     AnswerAttemptRepository answerAttemptRepository;
-
+    ObjectMapper objectMapper;
     KeyCloakTokenClient keyCloakTokenClient;
     KeyCloakUserClient keyCloakUserClient;
     RedisService redisService;
@@ -68,14 +71,13 @@ public class AttemptServiceImpl implements AttemptService {
 
     @Override
     @Transactional
-    public PassageAttemptResponse createAttempt(String passageId, HttpServletRequest request) throws JsonProcessingException {
+    public AttemptResponse createAttempt(String passageId, HttpServletRequest request) throws JsonProcessingException {
         ReadingPassage passage = readingPassageRepository.findById(UUID.fromString(passageId))
                 .orElseThrow(() -> new AppException(
                         Constants.ErrorCodeMessage.PASSAGE_NOT_FOUND,
                         Constants.ErrorCode.PASSAGE_NOT_FOUND,
                         HttpStatus.NOT_FOUND.value()
                 ));
-
         ReadingPassage currentVersion = readingPassageRepository.findCurrentVersionById(passage.getPassageId())
                 .orElseThrow(() -> new AppException(
                         Constants.ErrorCodeMessage.PASSAGE_NOT_FOUND,
@@ -83,16 +85,14 @@ public class AttemptServiceImpl implements AttemptService {
                         HttpStatus.NOT_FOUND.value()
                 ));
 
-        if (passage.getPassageStatus() == null || passage.getPassageStatus() != Status.PUBLISHED) {
+
+        if (currentVersion.getPassageStatus() == null || currentVersion.getPassageStatus() != Status.PUBLISHED) {
             throw new AppException(
                     Constants.ErrorCodeMessage.PASSAGE_NOT_ACTIVE,
                     Constants.ErrorCode.PASSAGE_NOT_ACTIVE,
                     HttpStatus.BAD_REQUEST.value()
             );
         }
-
-        List<QuestionGroup> currentVersionGroups = questionGroupRepository.findAllCurrentVersionGroupsByPassageId(passage.getPassageId());
-
 
         List<QuestionGroup> questionGroups = questionGroupRepository.findAllByReadingPassageByPassageId(passage.getPassageId());
         if (questionGroups.isEmpty()) {
@@ -102,124 +102,150 @@ public class AttemptServiceImpl implements AttemptService {
                     HttpStatus.NOT_FOUND.value()
             );
         }
-
-        Map<UUID, List<Question>> questionsByGroup = new HashMap<>();
-        Map<UUID, List<Choice>> choicesByQuestion = new HashMap<>();
-        Map<UUID, List<DragItem>> dragItemsByGroup = new HashMap<>();
-
+        Map<QuestionGroup, Map<Question, List<Choice>>> currentVersionChoicesByGroup = new HashMap<>();
         for (QuestionGroup group : questionGroups) {
-            List<Question> questions = questionRepository.findAllByQuestionGroupOrderByQuestionOrderAsc(group);
-            if (questions.isEmpty()) {
-                throw new AppException(
-                        Constants.ErrorCodeMessage.QUESTION_NOT_FOUND,
-                        Constants.ErrorCode.QUESTION_NOT_FOUND,
-                        HttpStatus.NOT_FOUND.value()
-                );
-            }
-            questionsByGroup.put(group.getGroupId(), questions);
+            List<Question> currentVersionQuestions = questionRepository.findCurrentVersionByGroup(group.getGroupId());
+            Map<Question, List<Choice>> currentVersionChoicesByQuestion = new HashMap<>();
+            for (Question currentVersionQuestion : currentVersionQuestions) {
+                QuestionVersion questionVersion = QuestionVersion.builder()
+                        .questionId(currentVersionQuestion.getQuestionId())
+                        .build();
+                if (currentVersionQuestion.getQuestionType() == QuestionType.MULTIPLE_CHOICE) {
 
-            for (Question question : questions) {
-                if (question.getQuestionType() == QuestionType.MULTIPLE_CHOICE) {
-                    List<Choice> choices = choiceRepository.findByQuestionAndIsDeletedOrderByChoiceOrderAsc(question,false);
-                    choicesByQuestion.put(question.getQuestionId(), choices);
+                    List<UUID> choiceVersionIds = new ArrayList<>();
+                    if (currentVersionQuestion.getParent() == null) {
+                        List<Choice> currentVersionChoices = choiceRepository.getVersionChoiceByQuestionId(
+                                currentVersionQuestion.getQuestionId());
+                        currentVersionChoices.stream()
+                                .map(Choice::getChoiceId)
+                                .forEach(choiceVersionIds::add);
+
+                        if (currentVersionChoices.isEmpty()) {
+                            throw new AppException(
+                                    Constants.ErrorCodeMessage.CHOICE_NOT_FOUND,
+                                    Constants.ErrorCode.CHOICE_NOT_FOUND,
+                                    HttpStatus.NOT_FOUND.value()
+                            );
+                        }
+                        currentVersionChoicesByQuestion.put(currentVersionQuestion, currentVersionChoices);
+                    } else {
+                        List<Choice> originVersionChoices = choiceRepository.getVersionChoiceByParentQuestionId(
+                                currentVersionQuestion.getParent().getQuestionId());
+                        List<Choice> choices = new ArrayList<>();
+
+                        for (Choice choice : originVersionChoices) {
+                            if (!choice.getIsCurrent()) {
+                                Choice current = choiceRepository.getCurrentVersionChoiceByChoiceId(choice.getChoiceId());
+                                choices.add(current);
+
+                            } else {
+                                choices.add(choice);
+                            }
+                        }
+                        choices.stream()
+                                .map(Choice::getChoiceId)
+                                .forEach(choiceVersionIds::add);
+                        currentVersionChoicesByQuestion.put(currentVersionQuestion, choices);
+                    }
+                    questionVersion.setChoiceMapping(choiceVersionIds);
                 }
-                dragItemRepository.findByQuestion(question).ifPresent(di -> {
-                    dragItemsByGroup.computeIfAbsent(group.getGroupId(), k -> new ArrayList<>()).add(di);
-                });
+
+                else {
+                    List<Choice> choices = new ArrayList<>();
+                    currentVersionChoicesByQuestion.put(currentVersionQuestion, choices);
+                }
             }
+
+
+            currentVersionChoicesByGroup.put(group, currentVersionChoicesByQuestion);
         }
 
-        String userId = getUserIdFromToken(request);
-        if (userId == null) {
-            throw new AppException(
-                    Constants.ErrorCodeMessage.UNAUTHORIZED,
-                    Constants.ErrorCode.UNAUTHORIZED,
-                    HttpStatus.UNAUTHORIZED.value()
-            );
-        }
-        UserProfileResponse userProfile = getUserProfileById(userId);
+        AttemptVersion version = AttemptVersion.builder()
+                .readingPassageId(passage.getPassageId())
+                .build();
+        Map<UUID, List<QuestionVersion>> questionVersions = new HashMap<>();
+
+
+
+        currentVersionChoicesByGroup.forEach((group, questionChoices) -> {
+            List<QuestionVersion> versions = new ArrayList<>();
+            for (Map.Entry<Question, List<Choice>> entry : questionChoices.entrySet()) {
+                Question question = entry.getKey();
+                List<Choice> choices = entry.getValue();
+
+                QuestionVersion questionVersion = QuestionVersion.builder()
+                        .questionId(question.getQuestionId())
+                        .choiceMapping(choices.stream().map(Choice::getChoiceId).collect(Collectors.toList()))
+                        .build();
+                versions.add(questionVersion);
+                questionVersions.put(group.getGroupId(), versions);
+            }
+        });
+        version.setGroupMappingQuestion(questionVersions);
 
         Attempt attempt = Attempt.builder()
-                .createdBy(userId)
                 .readingPassage(passage)
+                .createdBy(getUserIdFromToken(request))
                 .status(Status.DRAFT)
-                .createdAt(LocalDateTime.now())
-                .createdBy(userId)
+                .version(objectMapper.writeValueAsString(version))
+                .duration(0L)
                 .build();
         attempt = attemptRepository.save(attempt);
+        List<AttemptResponse.QuestionGroupAttemptResponse> questionGroupResponses =
+                currentVersionChoicesByGroup.entrySet().stream()
+                        .map(groupEntry -> {
+                            QuestionGroup group = groupEntry.getKey();
+                            Map<Question, List<Choice>> questionChoices = groupEntry.getValue();
 
-        List<PassageAttemptResponse.ReadingPassageResponse.QuestionGroupResponse> groupResponses =
-                questionGroups.stream().map(group -> {
-                    UUID groupId = group.getGroupId();
+                            List<AttemptResponse.QuestionGroupAttemptResponse.QuestionAttemptResponse> questionResponses =
+                                    questionChoices.entrySet().stream()
+                                            .map(questionEntry -> {
+                                                Question question = questionEntry.getKey();
+                                                List<Choice> choices = questionEntry.getValue();
 
-                    List<Question> questions = questionsByGroup.get(groupId);
-                    List<PassageAttemptResponse.ReadingPassageResponse.QuestionGroupResponse.QuestionResponse> questionResponses =
-                            questions.stream().map(question -> {
-                                List<UpdatedQuestionResponse.ChoiceResponse> choiceResponses =
-                                        choicesByQuestion.getOrDefault(question.getQuestionId(), Collections.emptyList())
-                                                .stream()
-                                                .map(choice -> UpdatedQuestionResponse.ChoiceResponse.builder()
-                                                        .choiceId(choice.getChoiceId().toString())
-                                                        .label(choice.getLabel())
-                                                        .choiceOrder(choice.getChoiceOrder())
-                                                        .content(choice.getContent())
-                                                        .build())
-                                                .toList();
+                                                List<AttemptResponse.QuestionGroupAttemptResponse.QuestionAttemptResponse.ChoiceAttemptResponse> choiceResponses =
+                                                        choices.stream()
+                                                                .map(choice -> new AttemptResponse.QuestionGroupAttemptResponse.QuestionAttemptResponse.ChoiceAttemptResponse(
+                                                                        choice.getChoiceId(),
+                                                                        choice.getLabel(),
+                                                                        choice.getContent(),
+                                                                        choice.getChoiceOrder()
+                                                                ))
+                                                                .collect(Collectors.toList());
 
-                                return PassageAttemptResponse.ReadingPassageResponse.QuestionGroupResponse.QuestionResponse.builder()
-                                        .questionId(question.getQuestionId().toString())
-                                        .questionOrder(question.getQuestionOrder())
-                                        .questionType(question.getQuestionType().ordinal())
-                                        .numberOfCorrectAnswers(question.getNumberOfCorrectAnswers())
-                                        .instructionForChoice(question.getInstructionForChoice())
-                                        .choices(choiceResponses)
-                                        .blankIndex(question.getBlankIndex())
-                                        .correctAnswer(question.getCorrectAnswer())
-                                        .instructionForMatching(question.getInstructionForMatching())
-                                        .correctAnswerForMatching(question.getCorrectAnswerForMatching())
-                                        .zoneIndex(question.getZoneIndex())
-                                        .build();
-                            }).toList();
+//
+                                                return AttemptResponse.QuestionGroupAttemptResponse.QuestionAttemptResponse
+                                                        .builder()
+                                                        .questionId(question.getQuestionId())
+                                                        .questionOrder(question.getQuestionOrder())
+                                                        .questionType(question.getQuestionType().ordinal())
+                                                        .numberOfCorrectAnswers(question.getNumberOfCorrectAnswers())
+                                                        .instructionForMatching(question.getInstructionForMatching())
+                                                        .choices(choiceResponses)
+                                                        .build();
+                                            })
+                                            .collect(Collectors.toList());
 
-                    List<UpdatedQuestionResponse.DragItemResponse> dragItemResponses =
-                            dragItemsByGroup.getOrDefault(groupId, Collections.emptyList())
-                                    .stream()
-                                    .map(di -> UpdatedQuestionResponse.DragItemResponse.builder()
-                                            .dragItemId(di.getDragItemId().toString())
-                                            .content(di.getContent())
-                                            .build())
-                                    .toList();
+                            return new AttemptResponse.QuestionGroupAttemptResponse(
+                                    group.getGroupId(),
+                                    group.getSectionOrder(),
+                                    group.getSectionLabel(),
+                                    group.getInstruction(),
+                                    group.getSentenceWithBlanks(),
+                                    questionResponses
+                            );
+                        })
+                        .collect(Collectors.toList());
 
-                    return PassageAttemptResponse.ReadingPassageResponse.QuestionGroupResponse.builder()
-                            .groupId(groupId.toString())
-                            .sectionLabel(group.getSectionLabel())
-                            .sectionOrder(group.getSectionOrder())
-                            .instruction(group.getInstruction())
-                            .dragItems(dragItemResponses)
-                            .questions(questionResponses)
-                            .build();
-                }).toList();
-
-        PassageAttemptResponse.ReadingPassageResponse readingPassageResp =
-                PassageAttemptResponse.ReadingPassageResponse.builder()
-                        .passageId(passageId)
-                        .instruction(passage.getInstruction())
-                        .title(passage.getTitle())
-                        .content(passage.getContent())
-                        .partNumber(passage.getPartNumber().ordinal())
-                        .questionGroups(groupResponses)
-                        .build();
-
-        return PassageAttemptResponse.builder()
-                .attemptId(attempt.getAttemptId().toString())
-                .createdBy(UserInformationResponse.builder()
-                        .userId(userId)
-                        .firstName(userProfile.firstName())
-                        .lastName(userProfile.lastName())
-                        .build())
-                .createdAt(attempt.getCreatedAt().toString())
-                .readingPassage(readingPassageResp)
-                .build();
+        return new AttemptResponse(
+                attempt.getAttemptId(),
+                passage.getPassageId(),
+                passage.getIeltsType().ordinal(),
+                passage.getPartNumber().ordinal(),
+                passage.getInstruction(),
+                passage.getContent(),
+                questionGroupResponses
+        );
     }
 
     @Override
